2005-08-27  Osmo Salomaa  <otsaloma@cc.hut.fi>

	* releasing.txt: Revised instructions.

2005-08-27  Osmo Salomaa  <otsaloma@cc.hut.fi>

	RELEASE 0.1.1

	* gaupol:
	  constants.py:
	  Bumped version numbers to 0.1.1.
	  
	* NEWS: Added release news.

2005-08-27  Osmo Salomaa  <otsaloma@cc.hut.fi>

	* setup.py: Automated source distribution building.
	
	* releasing.txt: Revised instructions.

2005-08-27  Osmo Salomaa  <otsaloma@cc.hut.fi>

	* gui/util/config.py (write_to_file):
	  Create directory ~/.gaupol if it doesn't exist. Fixes #2816.
	  
	* TODO: Drafted plans for 0.2.0.

2005-08-26  Osmo Salomaa  <otsaloma@cc.hut.fi>

	* gui/util/config.py (read_from_file):
	  Set version based on current version, not from config file.

2005-08-25  Osmo Salomaa  <otsaloma@cc.hut.fi>

	* releasing.txt: Revised instructions.

2005-08-25  Osmo Salomaa  <otsaloma@cc.hut.fi>

	RELEASE 0.1.0

	* gaupol:
	  constants.py:
	  Bumped version numbers to 0.1.0.
	  
	* NEWS: Added release news.

2005-08-25  Osmo Salomaa  <otsaloma@cc.hut.fi>

	* setup.py: Added README.translators and TODO to doc files.

2005-08-25  Osmo Salomaa  <otsaloma@cc.hut.fi>
	
	* trantool (compile_mo): Check syntax and be verbose.

	* README.translators: Updated to reflect changes in trantool.

2005-08-25  Osmo Salomaa  <otsaloma@cc.hut.fi>
	
	* gui/dialogs/about.py: Added translator credits.

2005-08-25  Osmo Salomaa  <otsaloma@cc.hut.fi>

	* po/ChangeLog: Added separate ChangeLog for translations.
	
	* MANIFEST.in: Added po/ChangeLog.

2005-08-25  Osmo Salomaa  <otsaloma@cc.hut.fi>

	* setup.py: Import VERSION from same directory.
	
	* gaupol:
	  constants.py:
	  Changed version numbers to 0.0.0.
	  
	* releasing.txt: Wrote file.
	
	* README.translators: Added a bit more info.

2005-08-24  Osmo Salomaa  <otsaloma@cc.hut.fi>

	* README: Updated based on website text.
	
	* gui/delegates/helper.py: Changed DOWNLOAD_URL to point to new URL.
	
	* README.translators: Added a bit more info.
	